goption: [linux] Look in /proc/self/cmdline for argv0 if not specified

We really shouldn't use <unknown> when we can perfectly easily
get argv0 out of /proc.  This avoids people having to pass argv
down into gtk_init/g_option_context_parse etc., which is important
because GTK+ uses it to initialize the WM_CLASS, which in turn
GNOME Shell consumes for application tracking.

https://bugzilla.gnome.org/show_bug.cgi?id=644309